gen/ProcessInput/editorGrammarParser.java
// Generated from D:/Documents/University/Part II Project/Interactive Fiction with KRaR/src/ProcessInput\editorGrammar.g4 by ANTLR 4.9.2
package ProcessInput;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class editorGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ALPHA=1, NUMERIC=2, ALPHANUMERIC=3, WHITESPACE=4, COLON=5, SEMICOLON=6, 
		LB_SQUARE=7, RB_SQUARE=8, LB_SHARP=9, RB_SHARP=10, LB_CURLY=11, RB_CURLY=12, 
		LB_ROUND=13, RB_ROUND=14, QUOTES=15, UNDERSCORE=16, COMMA=17, DOT=18, 
		INT=19, FLOAT=20, NUMBER=21, STRING=22, BOOL=23, VAR=24, AND=25, OR=26, 
		NOT=27, ID=28, FLAG=29, VALUE=30, OBJECT_TAG=31, ROOM_TAG=32, ACTION_TAG=33, 
		COND_TAG=34, EFFECT_TAG=35, ID_KEY=36, LOC_KEY=37, NAME_KEY=38, DESC_KEY=39, 
		FLAGS_KEY=40, VALUES_KEY=41, DIR_KEY=42, ACTION_KEY=43, PRSA_COND=44, 
		PRSO_COND=45, PRSI_COND=46, HERE_COND=47, ANDFLAGS_COND=48, ORFLAGS_COND=49, 
		HAVEITEM_COND=50, HAVEITEMS_COND=51, EQUALS_COND=52, GT_COND=53, LT_COND=54, 
		TELL_EFF=55, GOTO_EFF=56, SETFLAG_EFF=57, REMFLAG_EFF=58, TAKE_EFF=59, 
		PLACE_EFF=60, SET_EFF=61;
	public static final int
		RULE_id_entry = 0, RULE_loc_entry = 1, RULE_name_entry = 2, RULE_desc_entry = 3, 
		RULE_flags_entry = 4, RULE_values_entry = 5, RULE_dir_entry = 6, RULE_action_entry = 7, 
		RULE_value = 8, RULE_object = 9, RULE_room = 10, RULE_action = 11, RULE_action_block = 12, 
		RULE_conditional = 13, RULE_conditions = 14, RULE_effects = 15, RULE_effect_aux = 16, 
		RULE_condition_aux = 17, RULE_prsa_cond = 18, RULE_prso_cond = 19, RULE_prsi_cond = 20, 
		RULE_here_cond = 21, RULE_andflags_cond = 22, RULE_orflags_cond = 23, 
		RULE_haveitem_cond = 24, RULE_haveitems_cond = 25, RULE_equals_cond = 26, 
		RULE_gt_cond = 27, RULE_lt_cond = 28, RULE_condition = 29, RULE_tell_eff = 30, 
		RULE_goto_eff = 31, RULE_setflag_eff = 32, RULE_remflag_eff = 33, RULE_take_eff = 34, 
		RULE_place_eff = 35, RULE_set_eff = 36, RULE_effect = 37, RULE_game_grammar = 38;
	private static String[] makeRuleNames() {
		return new String[] {
			"id_entry", "loc_entry", "name_entry", "desc_entry", "flags_entry", "values_entry", 
			"dir_entry", "action_entry", "value", "object", "room", "action", "action_block", 
			"conditional", "conditions", "effects", "effect_aux", "condition_aux", 
			"prsa_cond", "prso_cond", "prsi_cond", "here_cond", "andflags_cond", 
			"orflags_cond", "haveitem_cond", "haveitems_cond", "equals_cond", "gt_cond", 
			"lt_cond", "condition", "tell_eff", "goto_eff", "setflag_eff", "remflag_eff", 
			"take_eff", "place_eff", "set_eff", "effect", "game_grammar"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, "':'", "';'", "'['", "']'", "'<'", "'>'", 
			"'{'", "'}'", "'('", "')'", "'\"'", "'_'", "','", "'.'", null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, "'_COND_'", "'_EFF_'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "ALPHA", "NUMERIC", "ALPHANUMERIC", "WHITESPACE", "COLON", "SEMICOLON", 
			"LB_SQUARE", "RB_SQUARE", "LB_SHARP", "RB_SHARP", "LB_CURLY", "RB_CURLY", 
			"LB_ROUND", "RB_ROUND", "QUOTES", "UNDERSCORE", "COMMA", "DOT", "INT", 
			"FLOAT", "NUMBER", "STRING", "BOOL", "VAR", "AND", "OR", "NOT", "ID", 
			"FLAG", "VALUE", "OBJECT_TAG", "ROOM_TAG", "ACTION_TAG", "COND_TAG", 
			"EFFECT_TAG", "ID_KEY", "LOC_KEY", "NAME_KEY", "DESC_KEY", "FLAGS_KEY", 
			"VALUES_KEY", "DIR_KEY", "ACTION_KEY", "PRSA_COND", "PRSO_COND", "PRSI_COND", 
			"HERE_COND", "ANDFLAGS_COND", "ORFLAGS_COND", "HAVEITEM_COND", "HAVEITEMS_COND", 
			"EQUALS_COND", "GT_COND", "LT_COND", "TELL_EFF", "GOTO_EFF", "SETFLAG_EFF", 
			"REMFLAG_EFF", "TAKE_EFF", "PLACE_EFF", "SET_EFF"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "editorGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public editorGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class Id_entryContext extends ParserRuleContext {
		public TerminalNode ID_KEY() { return getToken(editorGrammarParser.ID_KEY, 0); }
		public TerminalNode ID() { return getToken(editorGrammarParser.ID, 0); }
		public TerminalNode SEMICOLON() { return getToken(editorGrammarParser.SEMICOLON, 0); }
		public Id_entryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_id_entry; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof editorGrammarListener ) ((editorGrammarListener)listener).enterId_entry(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof editorGrammarListener ) ((editorGrammarListener)listener).exitId_entry(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof editorGrammarVisitor ) return ((editorGrammarVisitor<? extends T>)visitor).visitId_entry(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Id_entryContext id_entry() throws RecognitionException {
		Id_entryContext _localctx = new Id_entryContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_id_entry);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			match(ID_KEY);
			setState(79);
			match(ID);
			setState(80);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Loc_entryContext extends ParserRuleContext {
		public TerminalNode LOC_KEY() { return getToken(editorGrammarParser.LOC_KEY, 0); }
		public TerminalNode ID() { return getToken(editorGrammarParser.ID, 0); }
		public TerminalNode SEMICOLON() { return getToken(editorGrammarParser.SEMICOLON, 0); }
		public Loc_entryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_loc_entry; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof editorGrammarListener ) ((editorGrammarListener)listener).enterLoc_entry(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof editorGrammarListener ) ((editorGrammarListener)listener).exitLoc_entry(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof editorGrammarVisitor ) return ((editorGrammarVisitor<? extends T>)visitor).visitLoc_entry(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Loc_entryContext loc_entry() throws RecognitionException {
		Loc_entryContext _localctx = new Loc_entryContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_loc_entry);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			match(LOC_KEY);
			setState(83);
			match(ID);
			setState(84);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Name_entryContext extends ParserRuleContext {
		public TerminalNode NAME_KEY() { return getToken(editorGrammarParser.NAME_KEY, 0); }
		public TerminalNode STRING() { return getToken(editorGrammarParser.STRING, 0); }
		public TerminalNode SEMICOLON() { return getToken(editorGrammarParser.SEMICOLON, 0); }
		public Name_entryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_name_entry; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof editorGrammarListener ) ((editorGrammarListener)listener).enterName_entry(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof editorGrammarListener ) ((editorGrammarListener)listener).exitName_entry(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof editorGrammarVisitor ) return ((editorGrammarVisitor<? extends T>)visitor).visitName_entry(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Name_entryContext name_entry() throws RecognitionException {
		Name_entryContext _localctx = new Name_entryContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_name_entry);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			match(NAME_KEY);
			setState(87);
			match(STRING);
			setState(88);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Desc_entryContext extends ParserRuleContext {
		public TerminalNode DESC_KEY() { return getToken(editorGrammarParser.DESC_KEY, 0); }
		public TerminalNode STRING() { return getToken(editorGrammarParser.STRING, 0); }
		public TerminalNode SEMICOLON() { return getToken(editorGrammarParser.SEMICOLON, 0); }
		public Desc_entryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_desc_entry; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof editorGrammarListener ) ((editorGrammarListener)listener).enterDesc_entry(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof editorGrammarListener ) ((editorGrammarListener)listener).exitDesc_entry(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof editorGrammarVisitor ) return ((editorGrammarVisitor<? extends T>)visitor).visitDesc_entry(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Desc_entryContext desc_entry() throws RecognitionException {
		Desc_entryContext _localctx = new Desc_entryContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_desc_entry);
		try {
			setState(94);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DESC_KEY:
				enterOuterAlt(_localctx, 1);
				{
				setState(90);
				match(DESC_KEY);
				setState(91);
				match(STRING);
				setState(92);
				match(SEMICOLON);
				}
				break;
			case RB_CURLY:
			case FLAGS_KEY:
			case VALUES_KEY:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Flags_entryContext extends ParserRuleContext {
		public TerminalNode FLAGS_KEY() { return getToken(editorGrammarParser.FLAGS_KEY, 0); }
		public List<TerminalNode> FLAG() { return getTokens(editorGrammarParser.FLAG); }
		public TerminalNode FLAG(int i) {
			return getToken(editorGrammarParser.FLAG, i);
		}
		public TerminalNode SEMICOLON() { return getToken(editorGrammarParser.SEMICOLON, 0); }
		public List<TerminalNode> COMMA() { return getTokens(editorGrammarParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(editorGrammarParser.COMMA, i);
		}
		public Flags_entryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_flags_entry; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof editorGrammarListener ) ((editorGrammarListener)listener).enterFlags_entry(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof editorGrammarListener ) ((editorGrammarListener)listener).exitFlags_entry(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof editorGrammarVisitor ) return ((editorGrammarVisitor<? extends T>)visitor).visitFlags_entry(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Flags_entryContext flags_entry() throws RecognitionException {
		Flags_entryContext _localctx = new Flags_entryContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_flags_entry);
		int _la;
		try {
			setState(107);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case FLAGS_KEY:
				enterOuterAlt(_localctx, 1);
				{
				setState(96);
				match(FLAGS_KEY);
				setState(97);
				match(FLAG);
				setState(102);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(98);
					match(COMMA);
					setState(99);
					match(FLAG);
					}
					}
					setState(104);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(105);
				match(SEMICOLON);
				}
				break;
			case RB_CURLY:
			case VALUES_KEY:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Values_entryContext extends ParserRuleContext {
		public TerminalNode VALUES_KEY() { return getToken(editorGrammarParser.VALUES_KEY, 0); }
		public List<ValueContext> value() {
			return getRuleContexts(ValueContext.class);
		}
		public ValueContext value(int i) {
			return getRuleContext(ValueContext.class,i);
		}
		public TerminalNode SEMICOLON() { return getToken(editorGrammarParser.SEMICOLON, 0); }
		public List<TerminalNode> COMMA() { return getTokens(editorGrammarParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(editorGrammarParser.COMMA, i);
		}
		public Values_entryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_values_entry; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof editorGrammarListener ) ((editorGrammarListener)listener).enterValues_entry(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof editorGrammarListener ) ((editorGrammarListener)listener).exitValues_entry(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof editorGrammarVisitor ) return ((editorGrammarVisitor<? extends T>)visitor).visitValues_entry(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Values_entryContext values_entry() throws RecognitionException {
		Values_entryContext _localctx = new Values_entryContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_values_entry);
		int _la;
		try {
			setState(121);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case VALUES_KEY:
				enterOuterAlt(_localctx, 1);
				{
				setState(109);
				match(VALUES_KEY);
				setState(110);
				value();
				setState(115);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(111);
					match(COMMA);
					setState(112);
					value();
					}
					}
					setState(117);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(118);
				match(SEMICOLON);
				}
				break;
			case RB_CURLY:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Dir_entryContext extends ParserRuleContext {
		public List<TerminalNode> DIR_KEY() { return getTokens(editorGrammarParser.DIR_KEY); }
		public TerminalNode DIR_KEY(int i) {
			return getToken(editorGrammarParser.DIR_KEY, i);
		}
		public List<TerminalNode> ID() { return getTokens(editorGrammarParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(editorGrammarParser.ID, i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(editorGrammarParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(editorGrammarParser.SEMICOLON, i);
		}
		public Dir_entryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dir_entry; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof editorGrammarListener ) ((editorGrammarListener)listener).enterDir_entry(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof editorGrammarListener ) ((editorGrammarListener)listener).exitDir_entry(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof editorGrammarVisitor ) return ((editorGrammarVisitor<? extends T>)visitor).visitDir_entry(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Dir_entryContext dir_entry() throws RecognitionException {
		Dir_entryContext _localctx = new Dir_entryContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_dir_entry);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			match(DIR_KEY);
			setState(124);
			match(ID);
			setState(125);
			match(SEMICOLON);
			setState(131);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DIR_KEY) {
				{
				{
				setState(126);
				match(DIR_KEY);
				setState(127);
				match(ID);
				setState(128);
				match(SEMICOLON);
				}
				}
				setState(133);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Action_entryContext extends ParserRuleContext {
		public TerminalNode ACTION_KEY() { return getToken(editorGrammarParser.ACTION_KEY, 0); }
		public Action_blockContext action_block() {
			return getRuleContext(Action_blockContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(editorGrammarParser.SEMICOLON, 0); }
		public Action_entryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_action_entry; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof editorGrammarListener ) ((editorGrammarListener)listener).enterAction_entry(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof editorGrammarListener ) ((editorGrammarListener)listener).exitAction_entry(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof editorGrammarVisitor ) return ((editorGrammarVisitor<? extends T>)visitor).visitAction_entry(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Action_entryContext action_entry() throws RecognitionException {
		Action_entryContext _localctx = new Action_entryContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_action_entry);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			match(ACTION_KEY);
			setState(135);
			action_block();
			setState(136);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValueContext extends ParserRuleContext {
		public TerminalNode LB_ROUND() { return getToken(editorGrammarParser.LB_ROUND, 0); }
		public TerminalNode ALPHANUMERIC() { return getToken(editorGrammarParser.ALPHANUMERIC, 0); }
		public TerminalNode COLON() { return getToken(editorGrammarParser.COLON, 0); }
		public TerminalNode VAR() { return getToken(editorGrammarParser.VAR, 0); }
		public TerminalNode RB_ROUND() { return getToken(editorGrammarParser.RB_ROUND, 0); }
		public ValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_value; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof editorGrammarListener ) ((editorGrammarListener)listener).enterValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof editorGrammarListener ) ((editorGrammarListener)listener).exitValue(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof editorGrammarVisitor ) return ((editorGrammarVisitor<? extends T>)visitor).visitValue(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ValueContext value() throws RecognitionException {
		ValueContext _localctx = new ValueContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_value);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			match(LB_ROUND);
			setState(139);
			match(ALPHANUMERIC);
			setState(140);
			match(COLON);
			setState(141);
			match(VAR);
			setState(142);
			match(RB_ROUND);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ObjectContext extends ParserRuleContext {
		public TerminalNode OBJECT_TAG() { return getToken(editorGrammarParser.OBJECT_TAG, 0); }
		public TerminalNode LB_CURLY() { return getToken(editorGrammarParser.LB_CURLY, 0); }
		public Id_entryContext id_entry() {
			return getRuleContext(Id_entryContext.class,0);
		}
		public Loc_entryContext loc_entry() {
			return getRuleContext(Loc_entryContext.class,0);
		}
		public Name_entryContext name_entry() {
			return getRuleContext(Name_entryContext.class,0);
		}
		public Desc_entryContext desc_entry() {
			return getRuleContext(Desc_entryContext.class,0);
		}
		public Flags_entryContext flags_entry() {
			return getRuleContext(Flags_entryContext.class,0);
		}
		public Values_entryContext values_entry() {
			return getRuleContext(Values_entryContext.class,0);
		}
		public TerminalNode RB_CURLY() { return getToken(editorGrammarParser.RB_CURLY, 0); }
		public ObjectContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_object; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof editorGrammarListener ) ((editorGrammarListener)listener).enterObject(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof editorGrammarListener ) ((editorGrammarListener)listener).exitObject(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof editorGrammarVisitor ) return ((editorGrammarVisitor<? extends T>)visitor).visitObject(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ObjectContext object() throws RecognitionException {
		ObjectContext _localctx = new ObjectContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_object);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			match(OBJECT_TAG);
			setState(145);
			match(LB_CURLY);
			setState(146);
			id_entry();
			setState(147);
			loc_entry();
			setState(148);
			name_entry();
			setState(149);
			desc_entry();
			setState(150);
			flags_entry();
			setState(151);
			values_entry();
			setState(152);
			match(RB_CURLY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
